--- a/Hikawa/Hikawa.csproj
+++ b/Hikawa/Hikawa.csproj
@@ -7,10 +7,11 @@
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
     <IgnoreModFilePatterns>DotNetZip\.(?:dll|pdb),PyTK\.(?:dll|pdb),0Harmony\.(?:dll|pdb), MoonSharp.Interpreter\.(?:dll|pdb), NCalc\.(?:dll|pdb),TMXTile\.(?:dll|pdb)</IgnoreModFilePatterns>
+    <EnableHarmony>true</EnableHarmony>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
-    <PackageReference Include="Platonymous.PyTK" Version="1.12.15" />
   </ItemGroup>
 </Project>
