HikawaShrine.tmx is now HikawaShrine0.tmx. HikawaShrine2.tmx is now HikawaShrine.tmx. Populated with action objects and warps. Layers have been mostly flattened (Mtn, Wall, Fence, Bld are removed) and will draw in-game.
HikawaHouse has been given WindowLights and complete Warp properties, and extra floor layers will now draw in-game.

Blueberry.Hikawa is now a core dependency.

--- a/[TMXL] Hikawa/manifest.json
+++ b/[TMXL] Hikawa/manifest.json
@@ -12,6 +12,10 @@
 	},
 	"Dependencies": [
     {
+      "UniqueID": "blueberry.Hikawa",
+      "IsRequired": true
+    },
+    {
       "UniqueID": "FlashShifter.StardewValleyExpandedCP",
 			"IsRequired":  false 
     }
