Corrected NPC project names to match convention. Blueberry.Hikawa is now a core dependency.

--- a/[CM] Hikawa/manifest.json
+++ b/[CM] Hikawa/manifest.json
@@ -9,5 +9,11 @@
   "ContentPackFor": {
     "UniqueID": "Platonymous.CustomMusic",
     "MinimumVersion": "1.5.1"
-  }
+  },
+  "Dependencies": [
+    {
+      "UniqueID": "blueberry.Hikawa",
+      "IsRequired": true
+    }
+  ]
 }
