--- a/[CP] Hikawa NPC Ami/manifest.json
+++ b/[CP] Hikawa NPC Ami/manifest.json
@@ -8,5 +8,11 @@
   "UpdateKeys": [ "Nexus:????" ],
   "ContentPackFor": {
     "UniqueID": "Pathoschild.ContentPatcher"
-  }
+  },
+  "Dependencies": [
+    {
+      "UniqueID": "blueberry.Hikawa",
+      "IsRequired": true
+    }
+  ]
 }
