--- a/[TMXL] Hikawa/[TMXL] Hikawa.csproj
+++ b/[TMXL] Hikawa/[TMXL] Hikawa.csproj
@@ -12,6 +12,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="assets\HikawaShrine0.tmx" />
+    <None Remove="assets\paths.png" />
+    <None Remove="assets\spring_outdoorsTileSheet.png" />
+    <None Remove="assets\spring_town.png" />
+    <None Remove="assets\townInterior.png" />
+    <None Remove="assets\walls_and_floors.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
   </ItemGroup>
 
