--- a/[CP] Hikawa NPC Rei/manifest.json
+++ b/[CP] Hikawa NPC Rei/manifest.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Name": "Hikawa: Rei",
   "Author": "blueberry",
   "Version": "1.0.0",
@@ -12,6 +12,10 @@
   "Dependencies": [
     {
       "UniqueID": "blueberry.Hikawa",
+      "IsRequired": true
+    },
+    {
+      "UniqueID": "blueberry.TMXL.Hikawa",
       "IsRequired": true
     }
   ]
