--- a/[CM] Hikawa/manifest.json
+++ b/[CM] Hikawa/manifest.json
@@ -5,7 +5,7 @@
   "Description": "What the ..?",
   "UniqueID": "blueberry.CM.Hikawa",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:4643" ],
+  "UpdateKeys": [ "Nexus:????" ],
   "ContentPackFor": {
     "UniqueID": "Platonymous.CustomMusic",
     "MinimumVersion": "1.5.1"
