--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,13 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/assets/Music/11 Dark Kingdom.mp3
+/assets/Music/09 Yuugure Toki wa Youma no Yokan.mp3
+/assets/Music/07 Shitennou (Four Generals).mp3
+/assets/Music/07 Dareka ga Nerawareteiru.mp3
+/assets/Music/05 Zetsubou to Aku (Despair and Evil).mp3
+/[CM] Hikawa/assets/SailormoonZetsubouToAku.wav
+/[CM] Hikawa/assets/rainsound_wom.wav
+/[CM] Hikawa/assets/rainsound_ooh.wav
+/[CM] Hikawa/assets/rainsound_ahh.wav
+/[CM] Hikawa/assets/PrincessRemedySong2.wav
