Multiple: Added a new Cat critter with standing and sitting animations sprited and implemented, currently only setup to use sitting animation in debug setup. Mini-Sit implementation now leaves buttprints on snowy outdoors seats. Corrected package and dependency problems causing PyTK/SpaceCore issues, and re-enabled SpaceCore event listeners and references.
Changed prefix on console commands, added shorthand duplicates.
Changed out multiplayer client check to use Context.IsMainPlayer.
Player agency now correctly blocked when needed.
Mod data now unloaded on return-to-menu.
Renamed "Sprites" folder to "LooseSprites".
Renamed "Hilltop" totem to "Shrine".

--- a/Hikawa/Hikawa.csproj
+++ b/Hikawa/Hikawa.csproj
@@ -1,24 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-<PropertyGroup>
+  <PropertyGroup>
     <AssemblyName>Hikawa</AssemblyName>
     <RootNamespace>Hikawa</RootNamespace>
     <Version>1.0.0</Version>
     <TargetFramework>net452</TargetFramework>
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
-    <IgnoreModFilePatterns>DotNetZip\.(?:dll|pdb),PyTK\.(?:dll|pdb),0Harmony\.(?:dll|pdb), MoonSharp.Interpreter\.(?:dll|pdb), NCalc\.(?:dll|pdb),TMXTile\.(?:dll|pdb)</IgnoreModFilePatterns>
-    <EnableHarmony>true</EnableHarmony>
+    <IgnoreModFilePatterns>TMXTile\.(?:dll|pdb)</IgnoreModFilePatterns>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
-    <PackageReference Include="Platonymous.PyTK" Version="1.12.40" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="SpaceCore">
-      <HintPath>..\..\..\..\..\..\Steam\steamapps\common\Stardew Valley\Mods\[CORE]\SpaceCore\SpaceCore.dll</HintPath>
+      <HintPath>$(GamePath)\Mods\[CORE]\SpaceCore\SpaceCore.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="PyTK">
+      <HintPath>$(GamePath)\Mods\[CORE]\PyTK\PyTK.dll</HintPath>
+      <Private>false</Private>
     </Reference>
   </ItemGroup>
 </Project>
