--- a/Hikawa/manifest.json
+++ b/Hikawa/manifest.json
@@ -6,5 +6,13 @@
   "UniqueID": "blueberry.Hikawa",
   "EntryDll": "Hikawa.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:4643" ]
+  "UpdateKeys": [ "Nexus:4643" ],
+  "Dependencies": [
+    {
+      "UniqueID": "Platonymous.Toolkit"
+    },
+    {
+      "UniqueID": "spacechase0.SpaceCore"
+    }
+  ]
 }
