Multiple: Added behaviours for Crystal Moon Wand, new console command for giving custom items, API link to SailorStyles, now using global Multiplayer object from Game1 rather than reflecting each time, and two broken implementations of projectiles for the Wand. Moved HikawaShrine to a Locations folder. Added some Harmony to sidestep problems with long cooldowns on weapons, in progress.

--- a/Hikawa/Hikawa.csproj
+++ b/Hikawa/Hikawa.csproj
@@ -7,6 +7,7 @@
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
     <IgnoreModFilePatterns>TMXTile\.(?:dll|pdb)</IgnoreModFilePatterns>
+    <EnableHarmony>true</EnableHarmony>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -26,5 +27,9 @@
       <HintPath>$(GamePath)\Mods\[CORE]\PyTK\PyTK.dll</HintPath>
       <Private>false</Private>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="GameObjects\Monsters\" />
   </ItemGroup>
 </Project>
