Renamed Patches to HarmonyPatches and added new patches for default warp handling, melee weapon cooldowns (unfinished), and mini-sit features. EmaMenu now has an early implementation of seasonal and long-term bundles to complete. Added Content Patcher API interface for handling dynamic tokens in content packs. Standardised Path const values in ModConsts to always include the assets path. Added new console commands to clear HikawaBananas (unfinished), warping with NPCs, and testing Ema bundles. Edited Locations.json for forage/fishing data.

--- a/Hikawa/manifest.json
+++ b/Hikawa/manifest.json
@@ -9,10 +9,14 @@
   "UpdateKeys": [ "Nexus:4643" ],
   "Dependencies": [
     {
+      "UniqueID": "spacechase0.SpaceCore"
+    },
+    {
       "UniqueID": "Platonymous.Toolkit"
     },
     {
-      "UniqueID": "spacechase0.SpaceCore"
+      "UniqueID": "Pathoschild.ContentPatcher",
+      "IsRequired": false
     },
     {
       "UniqueID": "blueberry.SailorStyles",
