--- a/Hikawa/Hikawa.csproj
+++ b/Hikawa/Hikawa.csproj
@@ -15,10 +15,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="ContentPatcher">
+      <HintPath>$(GamePath)\Mods\[CORE]\ContentPatcher\ContentPatcher.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
     <Reference Include="SpaceCore">
       <HintPath>$(GamePath)\Mods\[CORE]\SpaceCore\SpaceCore.dll</HintPath>
       <Private>false</Private>
